# wyvern-starter

./: .gitignore  .pre-commit-config.yaml  setup.cfg
feature-store-python/features/: feature_store.yaml  features.py  main.py
pipelines/: main.py
pipelines/product_ranking/: models.py  ranking_pipeline.py  realtime_features.py  schemas.py
