[flake8]
max-line-length = 120
# black will introduce W503 which is not PEP8 compatible right now. However, https://peps.python.org/pep-0008/#should-a-line-break-before-or-after-a-binary-operator
ignore = N805,N802,B008,W503
extend-immutable-calls = fastapi.Depends, fastapi.params.Depends

[metadata]
description-file = README.md
